# Jobparser

./: functions.py  main.py  pyproject.toml
parser/: abstract_api.py  hh_api.py  sj_api.py
src/: json_saver.py  vacancy.py
