[tool.poetry]
name = "jobparser"
version = "0.1.0"
description = ""
authors = ["RmanKartavcev <128297080+Ramzes8@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^2.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

